--- a/advance/package.json
+++ b/advance/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "babel-node src/server/",
+    "start": "nodemon src/server/",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
@@ -51,6 +51,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
+    "nodemon": "^1.18.8",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
